--- a/miniYoutube/play.html
+++ b/miniYoutube/play.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"> 
-  <title>test</title>
+	<meta charset="utf-8"> 
+	<title>test</title>
 
-  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">  
-  <script src="./lib/jquery.js"></script>
-  <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
+	<link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">  
+<script src="./lib/jquery.js"></script>
+<script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
 <script type="text/javascript" src="http://cdn.staticfile.org/jqueryui/1.10.2/jquery-ui.min.js"></script>
 <script type="text/javascript" src="http://cdn.staticfile.org/jqueryui-touch-punch/0.2.2/jquery.ui.touch-punch.min.js"></script>
 <script type="text/javascript" src="http://cdn.staticfile.org/twitter-bootstrap/3.0.1/js/bootstrap.min.js"></script>
@@ -46,26 +46,64 @@
 		xmlhttp.onreadystatechange=function() {
 			if (xmlhttp.readyState==4 && xmlhttp.status==200) {
 				xmlDoc = xmlhttp.responseXML;
-				alert(xmlDoc);
-				//var x1 = xmlDoc.getElementsByTagName("urlV");
+				var x1 = xmlDoc.getElementsByTagName("urlV");
 				var uploader1 = xmlDoc.getElementsByTagName("uploaderr");
-				//var videoName = xmlDoc.getElementsByTagName("videoName");
-				//var description = xmlDoc.getElementsByTagName("description");
-				//var likes = xmlDoc.getElementsByTagName("like");
-				//var dislikes = xmlDoc.getElementsByTagName("dislike");
-				//document.getElementById("likes").innerHTML=likes[0].childNodes[0].nodeValue;
-				alert("2");
+				var videoName = xmlDoc.getElementsByTagName("videoName");
+				var description = xmlDoc.getElementsByTagName("description");
+				var likes = xmlDoc.getElementsByTagName("like");
+				var dislikes = xmlDoc.getElementsByTagName("dislike");
+				document.getElementById("uploader").innerHTML=uploader1[0].childNodes[0].nodeValue;
+				document.getElementById("title").innerHTML=videoName[0].childNodes[0].nodeValue;
+				document.getElementById("urlV").innerHTML="<source src=\""+x1[0].childNodes[0].nodeValue+"\"\>";
+				document.getElementById("description").innerHTML=description[0].childNodes[0].nodeValue;
+				document.getElementById("likes").innerHTML=likes[0].childNodes[0].nodeValue;
+				document.getElementById("dislikes").innerHTML=dislikes[0].childNodes[0].nodeValue;
+				
 			}
 		}
 		
-		xmlhttp.open("POST","loadVideo.jsp?vid="+vid,true);
-		xmlhttp.setRequestHeader('Content-Type', 'text/xml');
+		xmlhttp.open("GET","./lib/jsp/loadVideo.jsp?vid="+vid,false);
+		//xmlhttp.setRequestHeader('Content-Type', 'text/xml');
+		xmlhttp.send();
+	}
+
+	function loadcomment() {
+		var xmlDoc;
+		var xmlhttp;
+		if (window.XMLHttpRequest) {// code for IE7+, Firefox, Chrome, Opera, Safari
+			xmlhttp=new XMLHttpRequest();
+		}
+		else {// code for IE6, IE5
+			xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+		}
+
+		xmlhttp.onreadystatechange=function() {
+			if (xmlhttp.readyState==4 && xmlhttp.status==200) {
+				xmlDoc = xmlhttp.responseXML;
+				var x1 = xmlDoc.getElementsByTagName("urlV");
+				var uploader1 = xmlDoc.getElementsByTagName("uploaderr");
+				var videoName = xmlDoc.getElementsByTagName("videoName");
+				var description = xmlDoc.getElementsByTagName("description");
+				var likes = xmlDoc.getElementsByTagName("like");
+				var dislikes = xmlDoc.getElementsByTagName("dislike");
+				document.getElementById("uploader").innerHTML=uploader1[0].childNodes[0].nodeValue;
+				document.getElementById("title").innerHTML=videoName[0].childNodes[0].nodeValue;
+				document.getElementById("urlV").innerHTML="<source src=\""+x1[0].childNodes[0].nodeValue+"\"\>";
+				document.getElementById("description").innerHTML=description[0].childNodes[0].nodeValue;
+				document.getElementById("likes").innerHTML=likes[0].childNodes[0].nodeValue;
+				document.getElementById("dislikes").innerHTML=dislikes[0].childNodes[0].nodeValue;
+				
+			}
+		}
+		
+		xmlhttp.open("GET","/lib/jsp/loadComment.jsp?vid="+vid,false);
 		xmlhttp.send();
 	}
 
 	$(document).ready(function(){
 		window.onload=checkSession();
 		window.onload=loadvideo();
+		window.onload=loadcomment();
 
 	});
 	
@@ -118,16 +156,17 @@
 					</br>
 					</br>
 					<p> </p>
-					<span id="uploader"> </span>
+					<h5 class="text-info">uploader</h5><span id="uploader"> </span>
 					<span id="time"> </span>
+					<h5 class="text-info">description</h5>
 					<p id="description">There will be a div of the introduction of the vidoe</p>
 				</div>
 				<div class="col-md-8 column">	
-			 		<button class="btn btn-default" id="likes" type="button" onclick="addlike()">
-			 			like
+			 		<button class="btn btn-default"  type="button" onclick="addlike()">
+			 			like <span id="likes"></span>
 			 		</button> 
-			 		<button class="btn btn-default" id="dislikes" type="button" onclike="adddislike()">
-			 			dislike
+			 		<button class="btn btn-default" type="button" onclike="adddislike()">
+			 			dislike <span id="dislikes"></span>
 			 		</button> 
 		 			<a id="modal-453069" href="#modal-container-453069" role="button" class="btn" data-toggle="modal">report</a>
 					<div class="modal fade" id="modal-container-453069" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -139,7 +178,7 @@
 								</div>
 								<div class="modal-body">Description<textarea class="form-control" rows="5" value="description"></textarea></div>
 								<div class="modal-footer">
-					 				<button type="button" class="btn btn-default" data-dismiss="modal">cancle</button> <button type="button" class="btn btn-primary">report</button>
+					 				<button type="button" class="btn btn-default" data-dismiss="modal">cancle</button> <button type="button" class="btn btn-primary" onclick="report()">report</button>
 								</div>
 							</div>
 						</div>
