--- a/miniYoutube/index.html
+++ b/miniYoutube/index.html
@@ -68,8 +68,8 @@ footer .container{
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
-							<input type="text" class="form-control" />
-						</div> <button type="submit" class="btn btn-default">Search</button>
+							<input type="text" name="search_query" placeholder="Search" class="form-control" />
+						</div> <button type="submit" class="btn btn-default" formaction="results.html">Submit</button>
 					</form>
 					<ul class="nav navbar-nav navbar-right">
 						<li id="ticket1">
