--- a/miniYoutube/signin.html
+++ b/miniYoutube/signin.html
@@ -36,9 +36,9 @@
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
-							<input type="text" class="form-control" />
-						</div> <button type="submit" class="btn btn-default">Submit</button>
-					</form>
+							<input type="text" name="search_query" placeholder="Search" class="form-control" />
+						</div> <button type="submit" class="btn btn-default" formaction="results.html">Submit</button>
+					</form>			
 					<ul class="nav navbar-nav navbar-right">
 						<li id="ticket1">
 							<a href="signin.html">Sign in</a>
