--- a/miniYoutube/userpage.html
+++ b/miniYoutube/userpage.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8"> 
   <title>test</title>
 
-  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">  
+  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css"> 
+  <link rel="stylesheet" href="./lib/bootstrap/css/font-awesome.min.css">  
   <script src="./lib/jquery.js"></script>
   <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
@@ -122,9 +123,6 @@ $(document).ready(function(){
 });
 
 </script>
-
-
-<div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
 			<nav class="navbar navbar-default" role="navigation">
@@ -134,7 +132,7 @@ $(document).ready(function(){
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active">
-							 <a href="index.html">Home</a>
+							 <a href="index.html" class="icon-home"> Home</a>
 						</li>
 						<li>
 							 <a href="#">History</a>
@@ -143,17 +141,21 @@ $(document).ready(function(){
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
 							<input type="text" class="form-control" />
-						</div> <button type="submit" class="btn btn-default">Submit</button>
+						</div> <button type="submit" class="btn btn-default icon-search"> Search</button>
 					</form>
 					<ul class="nav navbar-nav navbar-right">
 						
 						<li id="ticket1">
-							 <a href="#" onclick="signout()">Sign out</a>
+							 <a href="#" class="icon-off" onclick="signout()"> Sign out</a>
 						</li>
 						
 					</ul>
 				</div>
 			</nav>
+			
+
+<div class="container">
+
 			<h3>User Page</h3>
 			<p id="username" style="display:none"></p>
 			<div class="row clearfix">
@@ -161,11 +163,11 @@ $(document).ready(function(){
 					<div class="panel-group" id="panel-152587">
 						<div class="panel panel-default">
 							<div class="panel-heading">
-								 <a class="panel-title" data-toggle="collapse" data-parent="#panel-152587" href="#panel-element-545711">History</a>
+								 <a class="panel-title icon-dashboard" data-toggle="collapse" data-parent="#panel-152587" href="#panel-element-545711"> Dashboard</a>
 							</div>
 							<div id="panel-element-545711" class="panel-collapse collapse in">
 								<div class="panel-body">
-									<a href="#" onclick="showUpload()">Upload video</a>
+									<a href="#" class="icon-upload-alt" onclick="showUpload()"> Upload video</a>
 									<script type="text/javascript">
 										function showUpload() {
 											var show1 = document.getElementById("upload");
@@ -179,7 +181,7 @@ $(document).ready(function(){
 									</script>
 								</div>
 								<div class="panel-body">
-									<a href="#" onclick="awe()">History</a>
+									<a href="#" class="icon-file-alt" onclick="awe()"> History</a>
 									<script type="text/javascript">
 										function awe() {
 											var a = document.getElementById("username");
@@ -191,11 +193,11 @@ $(document).ready(function(){
 						</div>
 						<div class="panel panel-default">
 							<div class="panel-heading">
-								 <a class="panel-title" data-toggle="collapse" data-parent="#panel-152587" href="#panel-element-893537">Settings</a>
+								 <a class="panel-title icon-cogs" data-toggle="collapse" data-parent="#panel-152587" href="#panel-element-893537"> Settings</a>
 							</div>
 							<div id="panel-element-893537" class="panel-collapse collapse">
 								<div class="panel-body">
-									<a href="#" onclick="showUploadprofile()">Modify profile</a>
+									<a href="#" onclick="showUploadprofile()"> Modify profile</a>
 									<script type="text/javascript">
 									function showUploadprofile() {
 											var show1 = document.getElementById("uploadpwd");
@@ -208,7 +210,7 @@ $(document).ready(function(){
 									</script>
 								</div>
 								<div class="panel-body">
-									<a href="#" onclick="showUploadpwd()">Update password</a>
+									<a href="#" onclick="showUploadpwd()"> Update password</a>
 									<script type="text/javascript">
 									function showUploadpwd() {
 											var show1 = document.getElementById("uploadpwd");
@@ -304,7 +306,7 @@ $(document).ready(function(){
 			</div>	
 		</div>
 	</div>
-</div>
+</div></br>
 </body>
 
 <footer>
