--- a/miniYoutube/signup.html
+++ b/miniYoutube/signup.html
@@ -60,12 +60,13 @@
 						<div class="input-group input-group-lg">
 				            <span class="input-group-addon"><span class="icon-user"></span></span>
 				            <input type="text" id="username"class="form-control" placeholder="username" onblur="userok()">
+				            
 				        </div>
 				        <span id="username_ticket"></span>
 				        </br>
 				        <div class="input-group input-group-lg">
 				            <span class="input-group-addon"><span class="icon-envelope"></span></span>
-				            <input type="text" id="email" class="form-control" placeholder="email">
+				            <input type="text" id="email" class="form-control" placeholder="email" onblur="emailok()">
 				        </div>
 				        <span id="email"></span>
 				        </br>
